app/Components/Layout.less
@import "../variables.less";

:local(.className) {

  h1, h2, h3, h4, h5, h6 {
    font-family: @font-family-header;
  }

  .detailPageHeader {
    text-align: left;
    margin-bottom: 20px;

    h2 {
      margin-bottom: 4px;
      text-transform: none;
      font-size: @font-size-h2;
      font-weight: 600;
      color: @text-color-dark;
    }
    div {
      font-family: @font-family-header;
      color: @text-color-light;
    }

    small {
      color: darken(@brand-info, 10%);
    }
  }
  // .accentRow {
  //   margin-top: 0;
  //   margin-bottom: 0;
  //   background-color: @gray-darker;
  //   padding-top: 10px;
  //   padding-bottom: 40px;

  //   * {
  //     color: #fff !important;
  //   }
  // }
  .projectPage {
    p {
      font-family: @font-family-text;
      color: @text-color-light;
    }

    small {
      font-family: @font-family-text;
      color: @text-color-light;
    }

    h1, h2, h3, h4, h5, h6 {
      font-family: @font-family-text;
      color: @text-color-dark;
    }
  }

  b {
    font-weight: 600;
    color: @text-color-dark;
  }
  hr {
      border-top: 1px solid lighten(@gray-light, 0%);
  }
  a {
    color: @link-color;
  }
  a:hover {
    color: @link-hover-color;
  }
  .btn {
    color: #fff;
  }
  .btn:hover {
    color: #fff;
  }
  .screenShot {
    padding: 0;
    border: 1px solid lighten(@gray-light, 0%);
    margin-top: 10px;
    margin-bottom: 10px;
  }

  img {
    margin: 10px 0;
  }

  img.noSmooth {
    image-rendering: optimizeSpeed;             /* Older versions of FF          */
    image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
    image-rendering: -webkit-optimize-contrast; /* Safari                        */
    image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
    image-rendering: pixelated;                 /* Awesome future-browsers       */
    -ms-interpolation-mode: nearest-neighbor;   /* IE                            */
  }
}

